--- a/projects/bsp404.md
+++ b/projects/bsp404.md
@@ -1,7 +1,7 @@
 ---
 layout: project
 type: project
-image: img/bsp404.png
+image: img/bsp404 half.png
 title: "Barangay SP404 info system"
 date: 2022
 published: true
