--- a/projects/bsp404.md
+++ b/projects/bsp404.md
@@ -2,7 +2,7 @@
 layout: project
 type: project
 image: img/bsp404 half.png
-title: "Barangay SP404 info system"
+title: "Barangay SP404 Info System"
 date: 2022
 published: true
 labels:
@@ -12,7 +12,6 @@ labels:
 summary: "Our team developed a layout for a Barangay Information system."
 ---
 
-Micromouse is an event where small robot “mice” solve a 16 x 16 maze.  Events are held worldwide.  The maze is made up of a 16 by 16 gird of cells, each 180 mm square with walls 50 mm high.  The mice are completely autonomous robots that must find their way from a predetermined starting position to the central area of the maze unaided.  The mouse will need to keep track of where it is, discover walls as it explores, map out the maze and detect when it has reached the center.  having reached the center, the mouse will typically perform additional searches of the maze until it has found the most optimal route from the start to the center.  Once the most optimal route has been determined, the mouse will run that route in the shortest possible time.
-
-For this project, I was the lead programmer who was responsible for programming the various capabilities of the mouse.  I started by programming the basics, such as sensor polling and motor actuation using interrupts.  From there, I then programmed the basic PD controls for the motors of the mouse.  The PD control the drive so that the mouse would stay centered while traversing the maze and keep the mouse driving straight.  I also programmed basic algorithms used to solve the maze such as a right wall hugger and a left wall hugger algorithm.  From there I worked on a flood-fill algorithm to help the mouse track where it is in the maze, and to map the route it takes.  We finished with the fastest mouse who finished the maze within our college.
+This Barangay Information System layout is a project of ours that aims to aid local barangays and its residents when it comes to the issues of transferring of information, communication between the residents and the barangay officials, and transparency of records. 
+(You can navigate the website through this site: https://comforting-tiramisu-c0e78a.netlify.app/)
 
